manifests/gitlab-operator-1.0.2.tgz-manifest.yaml
---
# Source: gitlab-operator/templates/manager/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    control-plane: controller-manager
  name: gitlab-controller-manager-metrics-service
  namespace: default
spec:
  ports:
  - name: https
    port: 8443
    targetPort: https
  selector:
    control-plane: controller-manager
---
# Source: gitlab-operator/templates/webhook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-webhook-service
  namespace: default
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 9443
  selector:
    control-plane: controller-manager
---
# Source: gitlab-operator/templates/manager/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    control-plane: controller-manager
  name: gitlab-controller-manager
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: controller-manager
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/default-container: manager
      labels:
        control-plane: controller-manager
    spec:
      containers:
      - args:
        - --metrics-addr=127.0.0.1:8080
        - --enable-leader-election
        - --zap-devel=false
        - --zap-log-level=info
        command:
        - /manager
        image: "registry.gitlab.com/gitlab-org/cloud-native/gitlab-operator:1.0.2"
        name: manager
        ports:
        - containerPort: 9443
          name: webhook-server
          protocol: TCP
        - containerPort: 6060
          name: health-port
        livenessProbe:
          httpGet:
            path: /liveness
            port: health-port
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /readiness
            port: health-port
          initialDelaySeconds: 5
          periodSeconds: 10
        resources:
          limits:
            cpu: 200m
            memory: 300Mi
          requests:
            cpu: 200m
            memory: 100Mi
        volumeMounts:
        - mountPath: /tmp/k8s-webhook-server/serving-certs
          name: cert
          readOnly: true
      - args:
        - --secure-listen-address=0.0.0.0:8443
        - --upstream=http://127.0.0.1:8080/
        - --logtostderr=true
        - --v=0
        image: "gcr.io/kubebuilder/kube-rbac-proxy:v0.14.1"
        name: kube-rbac-proxy
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 5m
            memory: 64Mi
        ports:
        - containerPort: 8443
          name: https
          protocol: TCP
      serviceAccountName: gitlab-manager
      terminationGracePeriodSeconds: 10
      volumes:
      - name: cert
        secret:
          defaultMode: 420
          secretName: webhook-server-cert
---
# Source: gitlab-operator/templates/nginx-ingress/ingressclass.yaml
# We don't support namespaced ingressClass yet
# So a ClusterRole and a ClusterRoleBinding is required
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: gitlab-nginx
spec:
  # Must match the `--controller-class` value in the NGINX Controller Deployment,
  # configurable via:
  #   nginx-ingress.controller.ingressClassResource.controllerValue
  controller: k8s.io/ingress-nginx
---
# Source: gitlab-operator/templates/webhook/manifests.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    cert-manager.io/inject-ca-from: default/gitlab-serving-cert
  name: gitlab-validating-webhook-configuration
webhooks:
- admissionReviewVersions:
  - v1
  clientConfig:
    service:
      name: gitlab-webhook-service
      namespace: default
      path: /validate-apps-gitlab-com-v1beta1-gitlab
  failurePolicy: Fail
  name: vgitlab.kb.io
  rules:
  - apiGroups:
    - apps.gitlab.com
    apiVersions:
    - v1beta1
    operations:
    - CREATE
    - UPDATE
    resources:
    - gitlabs
  sideEffects: None
  namespaceSelector:
    matchExpressions:
    - key: name
      operator: In
      values:
      - default
